// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`modelToTypst — blocks, sections, stacked > matches the recorded stacked snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, above: 0pt, inset: (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.5in))[
#text(font: "Cormorant Garamond", size: 27pt, weight: "bold")[#"Ada"]

#text(size: 11.399999999999999pt, fill: rgb("#6b6560"))[#"P"]

#text(fill: rgb("#6b6560"))[#"a@x.com"]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Summary"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"Led "#emph[#"growth"]#"."]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Skills"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"Rust" #h(0.6em) #"Go"]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Eng"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"Shipped v2."])

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Tools"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"Figma" #h(0.6em) #"git"]
]

"
`;

exports[`modelToTypst — classic > matches the recorded classic snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: rgb("#2d2a26"), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[#align(center)[
  #text(font: "Cormorant Garamond", size: 27pt, weight: "bold", fill: white)[#"Ada"]

  #text(size: 11.399999999999999pt, fill: white)[#"P"]

  #text(size: 8.00pt, fill: white)[#"a@x.com"]
]]

#block(width: 100%, above: 0pt, inset: (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.5in))[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Professional Summary"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"S."]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Professional Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Eng"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Education"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"BSc — MIT — 2018"]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Skills"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"Rust"]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Tools"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"Figma"]
]

"
`;

exports[`modelToTypst — classic-featured > matches the recorded classic-featured snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: rgb("#2d2a26"), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[#align(center)[
  #text(font: "Cormorant Garamond", size: 27pt, weight: "bold", fill: white)[#"Ada"]

  #text(size: 11.399999999999999pt, fill: white)[#"P"]

  #text(size: 8.00pt, fill: white)[#"a@x.com"]
]]

#block(width: 100%, above: 0pt, inset: (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.5in))[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Professional Summary"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"S."]

#block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, width: 100%)[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Highlights"]

[#"Did X"]
]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Professional Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Eng"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Education"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"BSc"]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Skills"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"Rust"]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Tools"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"Figma"]
]

"
`;

exports[`modelToTypst — compact > matches the recorded compact snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 7.92pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: gradient.linear(angle: 135deg, rgb("#2d2a26"), rgb("#3d3832")), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[
  #text(font: "Cormorant Garamond", size: 22.95pt, weight: "bold", fill: white)[#"Ada"]

  #text(size: 9.689999999999998pt, fill: white)[#"P"]

  #text(size: 8.00pt, fill: white)[#"a@x.com"]
]

#block(width: 100%, above: 0pt, breakable: true)[
#grid(columns: (1fr, 2.4in),
  fill: (col, row) => if col == 1 { rgb("#f4e8e4") } else { none },
  inset: (col, row) => if col == 0 { (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.18in) } else { (top: 0.5in, bottom: 0.5in, left: 0.18in, right: 0.5in) },
  [
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Summary"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"S."]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Eng"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])
],
  [
#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Skills"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Rust"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Tools"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Figma"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Education"]]

#line(length: 100%, stroke: 1pt + accent)

[#"BSc — MIT"]
])
]

"
`;

exports[`modelToTypst — creative > matches the recorded creative snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: gradient.linear(angle: 135deg, rgb("#2d2a26"), rgb("#3d3832")), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[#align(center)[
  #text(font: "Cormorant Garamond", size: 27pt, weight: "bold", fill: white)[#"Ada Lovelace"]

  #text(size: 11.399999999999999pt, fill: white)[#"Pioneer"]

  #text(size: 8.00pt, fill: white)[#"ada@x.com"]
]]

#block(width: 100%, above: 0pt, inset: (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.5in))[
#align(center)[#emph[#"S."]]

#grid(columns: (1fr, 1fr), column-gutter: 10pt, row-gutter: 10pt,
block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, stroke: (left: 3pt + accent), width: 100%)[
#text(font: "Cormorant Garamond", size: 10.20pt, weight: "bold", fill: accent)[#"Skills"]

[#"Rust"]
],
block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, stroke: (left: 3pt + accent), width: 100%)[
#text(font: "Cormorant Garamond", size: 10.20pt, weight: "bold", fill: accent)[#"Tools"]

[#"Figma"]
]
)

#align(center)[#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Experience"]]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Collaborator"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Education"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"BSc"]
]"
`;

exports[`modelToTypst — executive > matches the recorded executive snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: gradient.linear(angle: 135deg, rgb("#2d2a26"), rgb("#3d3832")), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[
  #text(font: "Cormorant Garamond", size: 27pt, weight: "bold", fill: white)[#"Ada Lovelace"]

  #text(size: 11.399999999999999pt, fill: white)[#"Pioneer"]

  #text(size: 8.00pt, fill: white)[#"ada@x.com"]
]

#block(fill: rgb("#f4e8e4"), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), width: 100%, below: 0pt)[#align(center)[#emph[#"S."]]]

#block(width: 100%, above: 0pt, breakable: true)[
#grid(columns: (1fr, 2.2in),
  fill: (col, row) => if col == 1 { rgb("#f4e8e4") } else { none },
  inset: (col, row) => if col == 0 { (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.18in) } else { (top: 0.5in, bottom: 0.5in, left: 0.18in, right: 0.5in) },
  [
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Professional Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Collaborator"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])
],
  [
#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Skills"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Rust"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Tools"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Figma"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Education"]]

#line(length: 100%, stroke: 1pt + accent)

[#"BSc — MIT"]
])
]"
`;

exports[`modelToTypst — modern > matches the recorded modern snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: gradient.linear(angle: 135deg, rgb("#2d2a26"), rgb("#3d3832")), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[
  #grid(columns: (1fr, auto), column-gutter: 12pt, [#text(font: "Cormorant Garamond", size: 27pt, weight: "bold", fill: white)[#"Ada"]

#text(size: 11.399999999999999pt, fill: white)[#"P"]], [#align(right)[#text(size: 8.00pt, fill: white)[#"a@x.com"]]])
]

#block(width: 100%, above: 0pt, breakable: true)[
#grid(columns: (1.8in, 1fr),
  fill: (col, row) => if col == 0 { rgb("#f4e8e4") } else { none },
  inset: (col, row) => if col == 0 { (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.18in) } else { (top: 0.5in, bottom: 0.5in, left: 0.18in, right: 0.5in) },
  [
#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Skills"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Rust"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Tools"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Figma"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Education"]]

#line(length: 100%, stroke: 1pt + accent)

[#"BSc — MIT"]
],
  [
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Summary"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"S."]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Eng"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])
])
]

"
`;

exports[`modelToTypst — right-sidebar > matches the recorded right-sidebar snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: gradient.linear(angle: 135deg, rgb("#2d2a26"), rgb("#3d3832")), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[
  #text(font: "Cormorant Garamond", size: 27pt, weight: "bold", fill: white)[#"Ada"]

  #text(size: 11.399999999999999pt, fill: white)[#"P"]

  #text(size: 8.00pt, fill: white)[#"a@x.com"]
]

#block(width: 100%, above: 0pt, breakable: true)[
#grid(columns: (1fr, 2.4in),
  fill: (col, row) => if col == 1 { rgb("#f4e8e4") } else { none },
  inset: (col, row) => if col == 0 { (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.18in) } else { (top: 0.5in, bottom: 0.5in, left: 0.18in, right: 0.5in) },
  [
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Summary"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"S."]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Eng"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])
],
  [
#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Skills"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Rust"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Tools"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Figma"]
])
]

"
`;

exports[`modelToTypst — sidebar > matches the recorded sidebar snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: gradient.linear(angle: 135deg, rgb("#2d2a26"), rgb("#3d3832")), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[
  #text(font: "Cormorant Garamond", size: 27pt, weight: "bold", fill: white)[#"Ada"]

  #text(size: 11.399999999999999pt, fill: white)[#"P"]

  #text(size: 8.00pt, fill: white)[#"a@x.com"]
]

#block(width: 100%, above: 0pt, breakable: true)[
#grid(columns: (2.4in, 1fr),
  fill: (col, row) => if col == 0 { rgb("#f4e8e4") } else { none },
  inset: (col, row) => if col == 0 { (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.18in) } else { (top: 0.5in, bottom: 0.5in, left: 0.18in, right: 0.5in) },
  [
#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Skills"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Rust" #h(0.6em) #"Go"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Tools"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Figma" #h(0.6em) #"git"]
],
  [
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Summary"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"S."]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#text(font: "Cormorant Garamond", weight: "bold")[#"Eng"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])
])
]

"
`;

exports[`modelToTypst — stacked-vertical > matches the recorded stacked-vertical snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, above: 0pt, inset: (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.5in))[
#text(font: "Cormorant Garamond", size: 27pt, weight: "bold")[#"Ada"]

#text(size: 11.399999999999999pt, fill: rgb("#6b6560"))[#"P"]

#text(fill: rgb("#6b6560"))[#"a@x.com"]

#block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, width: 100%)[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Summary"]

[#"S."]
]

#block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, width: 100%)[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Highlights"]

[#"Did X"]
]

#block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, width: 100%)[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Skills"]

[#"Rust"]
]

#block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, width: 100%)[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Experience"]

#text(font: "Cormorant Garamond", weight: "bold")[#"Eng"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])
]

#block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, width: 100%)[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Education"]

[#"BSc"]
]

#block(fill: rgb("#f4e8e4"), radius: 8pt, inset: 8pt, width: 100%)[
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Tools"]

[#"Figma"]
]
]

"
`;

exports[`modelToTypst — timeline > matches the recorded timeline snapshot 1`] = `
"#set page(width: 8.5in, height: auto, margin: 0pt)
#set text(font: "DM Sans", size: 9pt, fill: rgb("#2d2a26"))
#set par(leading: 0.450em, justify: false)
#let accent = rgb("#c45c3e")

#block(width: 100%, fill: gradient.linear(angle: 135deg, rgb("#2d2a26"), rgb("#3d3832")), inset: (top: 0.5in, bottom: 0.28in, left: 0.5in, right: 0.5in), below: 0pt)[
  #text(font: "Cormorant Garamond", size: 27pt, weight: "bold", fill: white)[#"Ada Lovelace"]

  #text(size: 11.399999999999999pt, fill: white)[#"Pioneer"]

  #text(size: 8.00pt, fill: white)[#"ada@x.com"]
]

#block(width: 100%, above: 0pt, breakable: true)[
#grid(columns: (1fr, 2.4in),
  fill: (col, row) => if col == 1 { rgb("#f4e8e4") } else { none },
  inset: (col, row) => if col == 0 { (top: 0.5in, bottom: 0.5in, left: 0.5in, right: 0.18in) } else { (top: 0.5in, bottom: 0.5in, left: 0.18in, right: 0.5in) },
  [
#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Summary"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"First programmer."]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Experience"]

#line(length: 100%, stroke: 0.5pt + accent)

#block(width: 100%, inset: (left: 14pt), stroke: (left: 1.5pt + accent))[
#stack(spacing: 10pt,
block(width: 100%)[
#place(top + left, dx: -18pt, dy: 2pt)[#circle(radius: 3.5pt, fill: accent)]
#text(font: "Cormorant Garamond", weight: "bold")[#"Collaborator"]
#text(fill: rgb("#c45c3e"))[#"Acme"]
#text(style: "italic", fill: rgb("#6b6560"))[#"2020"]
#list(marker: [#"•"], [#"v2"])
]
)
]

#text(font: "Cormorant Garamond", weight: "bold", fill: accent)[#"Education"]

#line(length: 100%, stroke: 0.5pt + accent)

[#"BSc"]
],
  [
#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Skills"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Rust"]

#text(font: "Cormorant Garamond", size: 9.60pt, weight: "bold", fill: accent)[#upper[#"Tools"]]

#line(length: 100%, stroke: 1pt + accent)

[#"Figma"]
])
]

"
`;
